--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "etag": "^1.8.1",
     "express": "^4.18.3",
     "finalhandler": "^1.2.0",
+    "firebase": "^10.9.0",
+    "firebase-admin": "^12.0.0",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
     "function-bind": "^1.1.2",
